# ruler

./: .eslintrc.cjs  .gitignore  .netrc  .repomix-output.txt  AGENTS.md  CHANGELOG.md  PRD.md  README.md  codex-cli-mcp-plan.md  eslint.config.mjs  feature-gitignore.md  implementation-plan.md  jest.config.js  jest.setup.js  package-lock.json  package.json  plan.md  pnpm-lock.yaml  test-agents-md-backup.js  tsconfig.json  v0.2-plan.md
.changeset/: config.json  env-var-expansion.md  fix-skillz-mcp-exclusions.md  prune-orphaned-skills.md  wise-melons-argue.md
.claude/: AGENTS.md  settings.local.json  skiller.toml
.github/: copilot-instructions.md
.ruler/: AGENTS.md  ruler.toml
rust-ruler/: Cargo.toml  PROGRESS.md  README.md
rust-ruler/src/: lib.rs  main.rs  types.rs
rust-ruler/src/agents/: agent_trait.rs  claude.rs  codex_cli.rs  copilot.rs  create_stubs.sh  cursor.rs  mod.rs  registry.rs  stubs.rs  windsurf.rs
rust-ruler/src/cli/: commands.rs  mod.rs
rust-ruler/src/core/: config.rs  filesystem.rs  gitignore.rs  mod.rs  rules.rs
rust-ruler/src/mcp/: merge.rs  mod.rs  propagate.rs
rust-ruler/tests/: functional_test.sh
rust/ruler-rs/: Cargo.toml
rust/ruler-rs/src/: main.rs
scripts/: functional_test.sh
src/: constants.ts  lib.ts  revert.ts  types.ts
test-opencode/: rule.md
test-qa/: .gitignore
tests/: agent-mcp-servers.test.ts  agent-specific-disable.test.ts  apply-disable-backup.toml.test.ts  apply-mcp-diagnostics.test.ts  apply-mcp.capability-warnings.test.ts  apply-mcp.disable.toml.test.ts  apply-mcp.firebase.test.ts  apply-mcp.merge.test.ts  (+37 more)
(+228 files in other folders)
