[package]
name = "ruler-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2.5"
thiserror = "1.0"
directories = "5.0"
pathdiff = "0.2"

[profile.release]
opt-level = 3
